--- a/config/matching/mapfree/roma_emat_dptkitti.yaml
+++ b/config/matching/mapfree/roma_emat_dptkitti.yaml
@@ -3,7 +3,7 @@ FEATURE_MATCHING: 'Precomputed'
 POSE_SOLVER: 'EssentialMatrixMetric'
 DATASET:
   ESTIMATED_DEPTH: 'dptkitti'
-MATCHES_FILE_PATH: '{scene_root}/correspondences_LoFTR.npz'
+MATCHES_FILE_PATH: '{scene_root}/correspondences_RoMa.npz'
 EMAT_RANSAC:
   PIX_THRESHOLD: 2.0 # why is this so large??
   SCALE_THRESHOLD: 0.1
